--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,10 +18,10 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'Personal academic website of Xuan Zhou'
+    twitter: ''
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-F3H8ESTJ1T'
     baidu_tongji: ''
   verification:
     google: ''
