--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -94,7 +94,15 @@ features:
     provider: ''
     api_key: ''
     zoom: 15
+  show_related:
+    book: true
+    page: false
+    post: true
+    project: true
+    publication: true
+    event: true
 
+  sharing: true
 # Extensions
 
 extensions:
