add baidu tongji

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -22,7 +22,7 @@ marketing:
     twitter: ''
   analytics:
     google_analytics: 'G-F3H8ESTJ1T'
-    baidu_tongji: ''
+    baidu_tongji: '027d65afb6c41662f4a83746c2222183'
   verification:
     google: ''
     baidu: ''
