--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Xuan Zhou # Website name
-baseURL: 'https://xuanzhou.netlify.app/' # Website URL
+baseURL: 'https://xuanzhou.ac.cn/' # Website URL
 
 ############################
 ## LANGUAGE
