--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -12,9 +12,9 @@ en:
 zh:
   languageCode: zh-Hans
   contentDir: content/zh
-  title: 周轩
-  params:
-    description: 周轩的个人网站
+  # title: 周轩
+  # params:
+  #   description: 周轩的个人网站
 #  menu:
 #    main:
 #      - name: 传
